# GDS3D

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build-installers.yml  release.yml
crates/gds3d/: Cargo.toml  README.md
crates/gds3d/src/: app.rs  export.rs  main.rs  model.rs  viewport.rs
docs/: AWG.gds  AWG2.gds  AWG_0.8nmCS_16CH_0nmOS.gds  AWG_3.2nm.gds  AWG_3.2nm_1.gds
i18n/: en.json  zh-CN.json
packaging/: build_app.py  package_installer.py
packaging/windows/: package.ps1
src/: AWG.py  FTS.py  Filter.py  Reconstruction.py  app.rs  archive.rs  component_tree.py  demo.py  eg1.py  eg2.py  eg3.py  eg4.py  eg5.py  eg6.py  eg7.py  eg8.py  eg9.py  export.rs  export_dialog.py  gds_import_dialog.py  gds_loader.py  i18n.py  industrial.qss  main.py  main.rs  main_window.py  mesh_factory.py  model.rs  objects.py  pdf_exporter.py  project_archive.py  property_panel.py  scene.py  test.py  test2.py  ui_settings_dialog.py  viewport.py
src/assets/locales/: app.yml
src/locales/: app.yml
src/ui/: mod.rs  properties.rs  style.rs  tree.rs
src/viewport/: Cargo.toml
src/viewport/src/: image.rs  lib.rs  renderer.rs
src/viewport/src/shaders/: viewport.wgsl
