[project]
name = "GDS3D"
version = "0.1.0"
description = "A 3D visualization editor for GDS layouts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdstk>=1.0.0",
    "mapbox-earcut>=2.0.0",
    "pillow>=12.2.0",
    "reportlab>=5.0.0",
    "pyside6>=6.11.1",
    "pyvista>=0.48.4",
    "pyvistaqt>=0.11.4",
]
