[package]
name = "gds3d"
version = "0.1.0"
edition = "2024"
description = "A 3D visualization editor for GDS layouts."
license = "MIT"

[dependencies]
anyhow = "1"
eframe = "0.35"
indexmap = { version = "2", features = ["serde"] }
lucide-icons = "1.22"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
